--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ header{
     height: 40px;
     border: none;
     border-radius: 0 4px 4px 0;
+    outline: none;
 }
 
 /* action container */
@@ -80,4 +81,64 @@ header{
     display: flex;
     flex-direction: column;
     text-align: center;
+}
+
+/* Main Section  */
+.bannner-Section{
+    margin: 40px 0px 15px;
+}
+.banner-image{
+    width: 100%;
+}
+.catogery-heading{
+    padding: 50px 0px 10px 30px;
+}
+.heading-title{
+    font-size: 1.4em;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: .15em;
+    color: #3e4152;
+}
+.catogery-items{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: 30px 0px 15px;
+}
+.sale-item{
+    width: 250px;
+}
+
+/* footer section */
+.footer-container{
+    padding: 30px 0px 40px 0px;
+    background: #FAFBFC;
+    display: flex;
+    justify-content: space-evenly;
+}
+.footer-column{
+    display: flex;
+    flex-direction: column;
+}
+.footer-column h3{
+    color: #282c3f;
+    font-size: 14px;
+    margin-bottom: 25px;
+    margin-top: 20px;
+}
+.footer-column a{
+    color: #696b79;
+    display: block;
+    font-size: 15px;
+    text-decoration: none;
+    padding-bottom: 5px;
+    cursor: pointer;
+}
+.copywright{
+    text-align: center;
+}
+.copywright h3{
+    font-size: 14px;
+    font-weight: 400;
 }
